<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_calculer" />

        <Button
            android:id="@+id/button_substract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_derniere_operation" />

        <Button
            android:id="@+id/ButtonQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz" />

        <Button
            android:id="@+id/buttonResultatQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultat" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>